Search scope in Mail view not restored properly
Currently there are three scopes for a search: current folder, current account, all (manually translated from German version).
It would be great if there'd be an option to set the default scope, since this is resetted to current folder when restarting Evolution.
Evolution 3.28.4
Edited by Milan Crha