I#78 - Search scope in Mail view not restored properly

Closes https://gitlab.gnome.org/GNOME/evolution/issues/78